# mcp-remote-macos-use

./: Dockerfile  LICENSE  README.md  conftest.py  pyproject.toml  pytest.ini  test_server.py
.github/workflows/: main.yml  pull-request.yml
src/: action_handlers.py  browser_service.py  comparison_test.py  test_browser.py  test_browser_service.py  test_wavebox.py  vnc_client.py
src/browser_actions/: __init__.py  playwright_handlers.py
src/mcp_remote_macos_use/: __init__.py  server.py
src/mcp_server_vnc_macos_use/: __init__.py  server.py
tests/: README.md  __init__.py  conftest.py  test_action_handlers.py  test_init.py  test_server.py  test_suite.py  test_tool_registration.py  test_vnc_client.py
